<resources>
    <string name="app_name">rentalApp</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="action_sign_in_short">Register</string>
    <string name="Email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to send you password reset instructions.</string>
    <string name="Rs">\u20B9</string>
    <string name="about_us">
        \nThe all new rentalApp is devoted to cater to the needs of all those who prefer renting things over buying them.
    From small and simple accessories to large automobiles, rentalApp connects users to give and take anything and everything on rent.
    Our app helps you find products on rent around you and makes renting process quite easy and efficient.

    </string>

    <string name="happy_renting">HAPPY RENTING!\n</string>

    <string name="app_use">
        How to use the rentalApp? \n\n\n
        ->> For giving items on rent choose the category and upload the details of your product. Make sure to mention security cost and
            all other necessary details to attract more and more buyers.\n\n
        ->> For buying items on rent, we provide you with all the uploaded products of your chosen category along with the owner information
            like city, contact number, email, etc. Just choose the product and connect with the owner via whatsApp or
            phone to fix a deal.\n\n
        ->> In case you want to edit the details of your uploaded product, just go to MyUploads section and edit the details as
            required.\n\n
        ->> While signing up the users are requested to give valid credentials for smooth renting process.\n\n


        For any queries, you can contact us at :\n
        +91-9694066988\n
        +91-9887066988\n
        Or drop an email at ankitapareek2000@gmail.com\n\n
    </string>

    <string name="app_download">
        So what are you waiting for?\n
        Just use and recommend the rentalApp now and make some great deals!\n\n\
    </string>

    <string-array name="Clothes">
        <item>Men\'s fashion</item>
        <item>Women\'s fashion</item>
    </string-array>

    <string-array name="Footwear">
        <item>Men\'s fashion</item>
        <item>Women\'s fashion</item>
    </string-array>

    <string-array name="Gadgets">
        <item>Speakers</item>
        <item>Camera</item>
        <item>USB devices</item>
        <item>Earphones/Headphones</item>
        <item>Mouse</item>
        <item>Keyboard</item>
    </string-array>

    <string-array name="Accessories">
        <item> Hats and Caps</item>
        <item>Goggles</item>
        <item>Watches</item>
        <item>Bags</item>
        <item>Jewellery"></item>
        <item>MakeUp items</item>
        <item>Others</item>
    </string-array>

    <string-array name="Books">
        <item>Academic and Professional</item>
        <item>Literature and Fiction</item>
        <item>Entrance Exam</item>
        <item>Biographies and Auto Biographies</item>
        <item>Business and Management</item>
        <item>Children and teens</item>
    </string-array>

    <string-array name="Automobiles">
        <item>Bicycles</item>
        <item>Scooties and Activas</item>
        <item>Cars</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="strings">\@array/Clothes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>


