<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
        android:id="@+id/logo_iv"
        android:layout_width="142dp"
        android:layout_height="137dp"
        android:background="@color/white"
        app:srcCompat="@drawable/logo"
        android:layout_marginTop="16dp"
        android:layout_centerInParent="true"/>
        </RelativeLayout>

    <TextView
        android:id="@+id/forgotPassword_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_forgot_password"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/forgotpasswordMsg_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_msg"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="50dp"
         />


    <Button
        android:id="@+id/resetPassword_bn"
        android:layout_width="299dp"
        android:layout_height="57dp"
        android:backgroundTint="@color/blue"
        android:text="@string/btn_reset_password"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/back_bn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_back"
        android:textColor="@color/blue"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
</ScrollView>

