<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_us_tv"
            android:text="About Us"
            android:textSize="20sp"
            android:textColor="@color/blue"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_us_info_tv"
            android:text="@string/about_us"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/app_use"
            android:text="@string/app_use"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/app_download"
            android:text="@string/app_download"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/happy_renting"
            android:text="@string/happy_renting"
            android:textSize="18sp"
            android:textColor="@color/purple"
            android:textAlignment="center"
            android:textStyle="bold"/>






    </LinearLayout>

</ScrollView>